# j5e

./: LICENSE  pyproject.toml
j5e/: Hypervisor.py  __main__.py
j5e/game/: Agents.py  DummyGame.py  GameSpace.py  Timer.py  __main__.py
j5e/grid/: led_strip.py
j5e/hardware/: led_strip.py
j5e/network/: Networks.py  SerialClient.py  SerialManager.py  SerialTCP.py  SocketClient.py  __main__.py
j5e/network/arduino_net/: arduino_net.ino
j5e/pjon/: #primary_network.py#  #serial_device.py#  .#primary_network.py  __main__.py  primary_network.py  secondary_network.py  serial_device.py
